# research-rng

./: .gitignore  README.md  clustering.py  clustering_embedding.py  demo.py  example_generator_usage.py  generator.py  model_provider.py  model_responses.json  pyproject.toml  response-comparer.ipynb  response_comparer.py  response_comparer_utils.py  response_visualizer 2.html  response_visualizer.html  test.json  test2.json  test_clustering.py
batch_response_generation_ipynb/: model_responses_0_10.jsonl  model_responses_0_1000.jsonl  rng-graphs.ipynb
batch_response_generation_ipynb/foundry/: foundrybatch_0_1000_Qwen_Qwen2.5-72B-Instruct.jsonl  foundrybatch_0_1000_meta-llama_Llama-4-Maverick-17B-128E-Instruct-FP8.jsonl  foundrybatch_0_1000_meta-llama_Llama-4-Scout-17B-16E-Instruct.jsonl  foundrybatch_0_1000_meta-llama_Meta-Llama-3.1-8B-Instruct.jsonl  foundrybatch_0_10_Qwen_Qwen2.5-72B-Instruct.jsonl  foundrybatch_0_10_meta-llama_Llama-4-Maverick-17B-128E-Instruct-FP8.jsonl  foundrybatch_0_10_meta-llama_Llama-4-Scout-17B-16E-Instruct.jsonl  foundrybatch_0_10_meta-llama_Meta-Llama-3.1-8B-Instruct.jsonl  foundrybatch_results_0_1000_Qwen_Qwen2.5-72B-Instruct.jsonl  foundrybatch_results_0_1000_meta-llama_Llama-4-Maverick-17B-128E-Instruct-FP8.jsonl  foundrybatch_results_0_1000_meta-llama_Llama-4-Scout-17B-16E-Instruct.jsonl  foundrybatch_results_0_1000_meta-llama_Meta-Llama-3.1-8B-Instruct.jsonl  foundrybatch_results_0_10_Qwen_Qwen2.5-72B-Instruct.jsonl  foundrybatch_results_0_10_meta-llama_Llama-4-Maverick-17B-128E-Instruct-FP8.jsonl  (+2 more)
joke_generation/: generate_diverse_jokes.py
(+80 files in other folders)
