[project]
name = "research-rng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy>=1.16.0",
    "google-generativeai>=0.8.0",
    "numpy>=1.21.0",
    "matplotlib",
    "dotenv",
    "litellm",
    "matplotlib",
    "numpy",
    "pandas",
    "httpx",
    "tqdm",
    "jupyter",
    "ipywidgets",
    "aiofiles",
    "python-dotenv"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
