[project]
name = "research-rng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scipy",
    "google-generativeai",
    "numpy",
    "matplotlib",
    "dotenv",
    "litellm",
    "matplotlib",
    "numpy",
    "pandas",
    "httpx",
    "tqdm",
    "jupyter",
    "ipywidgets",
    "aiofiles",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
