[project]
name = "research-rng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scipy",
    "google-generativeai",
    "numpy",
    "matplotlib",
    "dotenv",
    "litellm",
    "matplotlib",
    "numpy",
    "pandas",
    "httpx",
    "tqdm",
    "jupyter",
    "ipywidgets",
    "aiofiles",
    "python-dotenv",
    "umap-learn",
    "llvmlite>=0.42.0",
    "numba>=0.59.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
